--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ setTimeout('Elastic()',100)
 }
 </SCRIPT>
 
-<BODY  bgcolor="blue"  onLoad=Elastic()>
+<BODY  bgcolor="DarkBlue"  onLoad=Elastic()>
 <CENTER>
 <font color="red"   size=+2>This WebPage has been built by Antonio Chebanov using
 <font color="yellow" size=+2><h1 ID="elastic" ALIGN="Center">AWS CodeBuild</h1>
